tools/function-summary/bindgen_20210704.rs

#[test]
fn bindgen_test_layout_ncstats() {
    assert_eq!(
        ::core::mem::size_of::<ncstats>(),
        248usize,
        concat!("Size of: ", stringify!(ncstats))
    );
    assert_eq!(
        ::core::mem::align_of::<ncstats>(),
        8usize,
        concat!("Alignment of ", stringify!(ncstats))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).renders as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(renders)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).writeouts as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(writeouts)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).failed_renders as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(failed_renders)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).failed_writeouts as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(failed_writeouts)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).render_bytes as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(render_bytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).render_max_bytes as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(render_max_bytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).render_min_bytes as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(render_min_bytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).render_ns as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(render_ns)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).render_max_ns as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(render_max_ns)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).render_min_ns as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(render_min_ns)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).writeout_ns as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(writeout_ns)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).writeout_max_ns as *const _ as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(writeout_max_ns)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).writeout_min_ns as *const _ as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(writeout_min_ns)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).cellelisions as *const _ as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(cellelisions)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).cellemissions as *const _ as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(cellemissions)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).fgelisions as *const _ as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(fgelisions)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).fgemissions as *const _ as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(fgemissions)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).bgelisions as *const _ as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(bgelisions)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).bgemissions as *const _ as usize },
        144usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(bgemissions)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).defaultelisions as *const _ as usize },
        152usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(defaultelisions)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).defaultemissions as *const _ as usize },
        160usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(defaultemissions)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).refreshes as *const _ as usize },
        168usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(refreshes)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).appsync_updates as *const _ as usize },
        176usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(appsync_updates)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).fbbytes as *const _ as usize },
        184usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(fbbytes)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).planes as *const _ as usize },
        192usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(planes)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).raster_ns as *const _ as usize },
        200usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(raster_ns)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).raster_max_ns as *const _ as usize },
        208usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(raster_max_ns)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).raster_min_ns as *const _ as usize },
        216usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(raster_min_ns)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).sprixelemissions as *const _ as usize },
        224usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(sprixelemissions)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).sprixelelisions as *const _ as usize },
        232usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(sprixelelisions)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ncstats>())).sprixelbytes as *const _ as usize },
        240usize,
        concat!(
            "Offset of field: ",
            stringify!(ncstats),
            "::",
            stringify!(sprixelbytes)
        )
    );
}
extern "C" {
    #[doc = " Allocate an ncstats object. Use this rather than allocating your own, since"]
    #[doc = " future versions of Notcurses might enlarge this structure."]
    pub fn notcurses_stats_alloc(nc: *const notcurses) -> *mut ncstats;
}
extern "C" {
    #[doc = " Acquire an atomic snapshot of the Notcurses object's stats."]
    pub fn notcurses_stats(nc: *mut notcurses, stats: *mut ncstats);
}
extern "C" {
    #[doc = " Reset all cumulative stats (immediate ones, such as fbbytes, are not reset),"]
    #[doc = " first copying them into |*stats| (if |stats| is not NULL)."]
    pub fn notcurses_stats_reset(nc: *mut notcurses, stats: *mut ncstats);
}
extern "C" {
    #[doc = " Resize the specified ncplane. The four parameters 'keepy', 'keepx',"]
    #[doc = " 'keepleny', and 'keeplenx' define a subset of the ncplane to keep,"]
    #[doc = " unchanged. This may be a section of size 0, though none of these four"]
    #[doc = " parameters may be negative. 'keepx' and 'keepy' are relative to the ncplane."]
    #[doc = " They must specify a coordinate within the ncplane's totality. 'yoff' and"]
    #[doc = " 'xoff' are relative to 'keepy' and 'keepx', and place the upper-left corner"]
    #[doc = " of the resized ncplane. Finally, 'ylen' and 'xlen' are the dimensions of the"]
    #[doc = " ncplane after resizing. 'ylen' must be greater than or equal to 'keepleny',"]
    #[doc = " and 'xlen' must be greater than or equal to 'keeplenx'. It is an error to"]
    #[doc = " attempt to resize the standard plane. If either of 'keepleny' or 'keeplenx'"]
    #[doc = " is non-zero, both must be non-zero."]
    #[doc = ""]
    #[doc = " Essentially, the kept material does not move. It serves to anchor the"]
    #[doc = " resized plane. If there is no kept material, the plane can move freely."]
    pub fn ncplane_resize(
        n: *mut ncplane,
        keepy: cty::c_int,
        keepx: cty::c_int,
        keepleny: cty::c_int,
        keeplenx: cty::c_int,
        yoff: cty::c_int,
        xoff: cty::c_int,
        ylen: cty::c_int,
        xlen: cty::c_int,
    ) -> cty::c_int;
}
extern "C" {
    #[doc = " Destroy the specified ncplane. None of its contents will be visible after"]
    #[doc = " the next call to notcurses_render(). It is an error to attempt to destroy"]
    #[doc = " the standard plane."]
    pub fn ncplane_destroy(n: *mut ncplane) -> cty::c_int;
}
extern "C" {
    #[doc = " Set the ncplane's base nccell to 'c'. The base cell is used for purposes of"]
    #[doc = " rendering anywhere that the ncplane's gcluster is 0. Note that the base cell"]
    #[doc = " is not affected by ncplane_erase(). 'c' must not be a secondary cell from a"]
    #[doc = " multicolumn EGC."]
    pub fn ncplane_set_base_cell(n: *mut ncplane, c: *const nccell) -> cty::c_int;
}
